# astrbot-enhanced-chatsummary

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  README_en.md  _conf_schema.json  cli.py  install.sh  main.py  metadata.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
data/config/: _conf_schema.json  default_config.json
data/templates/: html_template.html  markdown_template.md
docs/: ATTRIBUTION.md  CONFIG.md  DEVELOPMENT.md  PLATFORM_COMPATIBILITY.md  USER_GUIDE.md
docs/images/: diagram.txt
examples/: summary_example.html  summary_example.md
i18n/: __init__.py  en_US.json  i18n.py  zh_CN.json
tests/: README.md  __init__.py  _test_chatsummary.py  conftest.py  test_basic.py  test_chatsummary.py  test_i18n.py
tests/test_data/: .gitkeep
